Implemented automatic splitting of large graph batches.
git-svn-id: https://batchfb.googlecode.com/svn/trunk@74 7eb0f46f-0d54-5784-3801-9043a8ae81e1